--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Dashan Gao's Page
+email: dgaoaa@connect.ust.hk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is Dashan Gao's homepage. I am currently a PhD student in Hong Kong University of Science and Technology.
+  My research interest includs federated learning, privacy-preserving machine laerning, and transfer learning.
+  This homepage shares some research progress.
+
+#  Write an awesome description for your new site here. You can edit this
+#  line in _config.yml. It will appear in your document head meta (for
+#  Google search results) and in your feed.xml site description.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  DashanGao
 
 # Build settings
 theme: minima
