--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  DashanGao
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
