--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  DashanGao
 
+google_analytics: True
+
 # Build settings
 theme: jekyll-theme-midnight
 plugins:
