--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: Dashan Gao's Page
 email: dgaoaa@connect.ust.hk
 description: >- # this means to ignore newlines until "baseurl:"
-  This is Dashan Gao's homepage. I am currently a PhD student in Hong Kong University of Science and Technology.
+  This is Dashan Gao's homepage. I am currently a PhD candidate in Hong Kong University of Science and Technology.
   My research interest includs federated learning, privacy-preserving machine learning, and transfer learning.
-  This homepage shares some research progress.
 
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
